added some project works

--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
 
 <body>
     <header>
-        <div class="header">
-            <div class="header-box">
-                <div class="title">
-                    <p>Happy New Year</p>
-                    <h1>New Year Party <br> Celebration</h1>
-                </div>
+        <div class="header-box">
+            <div class="title">
+                <p>Happy New Year</p>
+                <h1>New Year Party <br> Celebration</h1>
             </div>
+        </div>
         </div>
     </header>
     <div class="off">
@@ -58,10 +57,10 @@
     <div class="park">
         <div class="park-container">
             <div class="park-text">
-                <h2>Place: New Park Hotel</h2>
-                <h2>Date: 31 December Night 2023</h2>
-                <h2>Time: Evening 7.30 pm to 12.30 am</h2>
-                <p>JOIN NOW</p>
+                <h2><Span style="color: red;">Place:</Span> New Park Hotel</h2>
+                <h2><Span style="color: red;">Date:</Span> 31 December Night 2023</h2>
+                <h2><Span style="color: red;">Time:</Span> Evening 7.30 pm to 12.30 am</h2>
+                <button class="btn">JOIN NOW</button>
             </div>
         </div>
     </div>
@@ -73,7 +72,8 @@
                 <p>new best offer</p>
                 <h1>Coming Soon</h1>
                 <p>some days later we are planning new mission that <br>is party in coxsbazar your partners are welcomed
-                    <br>paying a small subsscription</p>
+                    <br>paying a small subsscription
+                </p>
             </div>
             <div class="ellipse">
                 <img src="/resources/Ellipse 1.png" alt="photo" srcset="">
@@ -149,7 +149,8 @@
     </div>
 
 
-    <div class="footer">
+
+    <footer>
         <div class="footer-container">
             <div class="footer-text">
                 <div class="footer-row1">
@@ -161,10 +162,10 @@
 
 
                     <div class="footer-icons">
-                        <img src="/resources/Facebook.png" alt="photo" srcset="">
-                        <img src="/resources/Instagram.png" alt="photo" srcset="">
-                        <img src="/resources/Twitter.png" alt="photo">
-                        <img src="/resources/Linkedin.png" alt="photo" srcset="">
+                        <img src="./resources/Facebook.png" alt="photo" srcset="">
+                        <img src="./resources/Instagram.png" alt="photo" srcset="">
+                        <img src="./resources/Twitter.png" alt="photo">
+                        <img src="./resources/Linkedin.png" alt="photo" srcset="">
                     </div>
                 </div>
 
@@ -176,7 +177,7 @@
 
             </div>
         </div>
-    </div>
+    </footer>
 
 
 
