added small part

--- a/index.html
+++ b/index.html
@@ -66,24 +66,21 @@
     </div>
 
 
-    <div class="coming">
-        <div class="coming-container">
-            <div class="coming-text">
-                <p>new best offer</p>
-                <h1>Coming Soon</h1>
-                <p>some days later we are planning new mission that <br>is party in coxsbazar your partners are welcomed
-                    <br>paying a small subsscription
-                </p>
-            </div>
-            <div class="ellipse">
-                <img src="/resources/Ellipse 1.png" alt="photo" srcset="">
-
-            </div>
-            <div class="group">
-                <p>2024</p>
-                <p>you are an amazing guy, enjoy unlimited </p>
-                <img src="/resources/Group 96.png" alt="photo" srcset="">
-            </div>
+    <div class="coming-soon">
+        <div class="coming-text">
+            <p class="new-best-offer">NEW BEST OFFER</p>
+            <h1 class="coming-soon-text">Coming Soon</h1>
+            <p style="margin-top: 30px;">Some days later we are planning new mission that <br>is party in cox'bazar your partners are welcomed
+                <br>paying a small subscription
+            </p>
+        </div>
+        <div class="ellipse">
+            <img src="/resources/Ellipse 1.png" alt="photo" srcset="">
+        </div>
+        <div class="group">
+            <p style="font-weight: bold; font-size: 48px; color:red; font-family: inter;">2024</p>
+            <p style="margin-top: 15px;">Lorem ipsum dolor sit amet consectetur <br>adipisicing elit. Ipsa consequatur laborum <br>officiis sunt facere inventor </p>
+            <img style="margin-top: 50px;" src="/resources/Group 96.png" alt="photo" srcset="">
         </div>
     </div>
 
